# Print-Flow

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pom.xml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06cdf29d79e5_cria_tabela_usuario.py  081e978948dc_inicial.py  3e2c4e1dcb36_cria_tabela_material.py  6ff5a474f2c2_cria_tabela_desperdicio.py  943ca8040c0b_cria_tabelas_produto_e_produto_material.py  9edda5f1b3cc_cria_tabelas_producao_e_producao_item.py  b4f7c2a918de_adiciona_midia_ao_produto.py  d73c9a5e1f20_vincula_desperdicio_a_producao.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  desperdicio.py  enums.py  material.py  producao.py  producao_item.py  produto.py  produto_material.py  usuario.py
backend/app/repositories/: desperdicio_repository.py  material_repository.py  producao_repository.py  produto_repository.py  relatorio_repository.py  usuario_repository.py
backend/app/routers/: auth.py  dashboard.py  desperdicios.py  materiais.py  producoes.py  produtos.py  relatorios.py
backend/app/schemas/: common.py  dashboard.py  desperdicio.py  material.py  producao.py  produto.py  relatorio.py  usuario.py
backend/app/services/: auth_service.py  dashboard_service.py  desperdicio_service.py  material_service.py  producao_service.py  produto_service.py  relatorio_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_desperdicios.py  test_login.py  test_materiais.py  test_perfil.py  (+4 more)
(+89 files in other folders)
